resume and footer update

--- a/about.html
+++ b/about.html
@@ -211,7 +211,7 @@
             <div class="timeline section-hidden">
                 <span>View More here</span> <br> <br>
                 <button id="resume">
-                    <a href="./img/Lebenslauf.rp.pdf">   <!-- resume -->
+                    <a href="./img/lebenslauf.de2020.pdf">   <!-- resume -->
                         <span>
                             <strong>Check resume</strong>
                             <i class="fa fa-file-pdf-o" style="color:red"></i>
@@ -231,7 +231,7 @@
             </div>
             <div class="contact">
                 <ul>
-                    <li>015166824724</li>
+                    <li>0176-4335-9665</li>
                 </ul>
             </div>
             <div class="electronic">
@@ -242,7 +242,7 @@
         </div>
         <hr>
         <div id="small-text">
-            <small>Randy Prempeh &copy; 2019 </small>
+            <small>Randy Prempeh &copy; 2020 </small>
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.11/lodash.min.js"></script>
