--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
                 </li>
                 <li><a href="#">
                         <span>
-                            <i class="fas fa-phone-volume"></i> </span> +49 151 668 247 24
+                            <i class="fas fa-phone-volume"></i> </span> +49 1764 3359 665
 
                     </a>
                 </li>
